--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -29,6 +29,8 @@
     "@nomicfoundation/hardhat-toolbox": "~2.0.0",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@~0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "~3.1.0",
+    "@openzeppelin/contracts-upgradeable": "^4.9.3",
+    "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "@typechain/ethers-v5": "~10.1.0",
     "@typechain/hardhat": "~6.1.3",
     "@types/eslint": "~8",
